--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,19 +1,17 @@
-name: Deploy
-
 on:
-  push:
-    branches: [ main ]
+  push:                 
+    branches:           
+      - main
   pull_request:
-    branches: [ main ]
-
-  workflow_dispatch:
-
+    branches:
+      - main
+name: Deploy 
 jobs:
   FTP-Deploy-Action:
     name: FTP-Deploy-Action     # JOBの名前
     runs-on: ubuntu-latest      # 仮想環境の種類を指定
     steps:
-      - uses: actions/checkout@master                   
+      - uses: actions/checkout@main                   
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@2.0.0   
         env:                                        
