--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -11,9 +11,9 @@ jobs:
     name: FTP-Deploy-Action     # JOBの名前
     runs-on: ubuntu-latest      # 仮想環境の種類を指定
     steps:
-      - uses: actions/checkout@main                   
+      - uses: actions/checkout@v2                   
       - name: FTP-Deploy-Action
-        uses: SamKirkland/FTP-Deploy-Action@2.0.0   
+        uses: SamKirkland/FTP-Deploy-Action@4.2.0   
         env:                                        
           FTP_SERVER: ${{ secrets.FTP_SERVER }}     
           FTP_USERNAME: ${{ secrets.FTP_USERNAME }} 
